Sem1 - sesion 2 Vistas Parciales y consultas

--- a/ProductosMVC/ProductosMVC.csproj
+++ b/ProductosMVC/ProductosMVC.csproj
@@ -181,6 +181,10 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Producto\Index.cshtml" />
     <Content Include="Views\Producto\Create.cshtml" />
+    <Content Include="Views\Producto\ListarProductos.cshtml" />
+    <Content Include="Views\Producto\ProductosStock.cshtml" />
+    <Content Include="Views\Producto\ProductosPrecios.cshtml" />
+    <Content Include="Views\Shared\PartialProductos.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
